reconstruct command consumer and event subscriber to independence of  concrete message queue

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -34,14 +34,14 @@
     <!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />-->
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework"/>
     <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework"/>
-    <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework"/>
-    <alias alias="EventPublisher" type="IFramework.Event.Impl.EventPublisher, IFramework"/>
+    <alias alias="IMessagePublisher" type="IFramework.Message.IMessagePublisher, IFramework"/>
+    <alias alias="MessagePublisher" type="IFramework.Message.Impl.MessagePublisher, IFramework"/>
     <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework"/>
     <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus"/>
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework"/>
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command"/>
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework"/>
-    <alias alias="CommandBus" type="IFramework.MessageQueue.ServiceBus.CommandBus, IFramework.MessageQueue.ServiceBus"/>
+    <alias alias="CommandBus" type="IFramework.Command.Impl.CommandBus, IFramework"/>
     <!--<alias alias="DistributableCommandBus" type="IFramework.MessageQueue.ZeroMQ.DistributableCommandBus, IFramework.MessageQueue.ZeroMQ" />-->
     <!--<alias alias="IMessageDistributor" type="IFramework.Message.IMessageDistributor, IFramework"/>
     <alias alias="CommandDistributor" type="IFramework.MessageQueue.ZeroMQ.CommandDistributor, IFramework.MessageQueue.ZeroMQ"/>-->
@@ -133,6 +133,8 @@
         <constructor>
           <param name="messageQueueClient" dependencyType="IMessageQueueClient"/>
           <param name="handlerProvider" dependencyName="AsyncDomainEventProvider"/>
+          <param name="commandBus" dependencyType="ICommandBus"></param>
+          <param name="messagePublisher" dependencyType="IMessagePublisher"></param>
           <param name="subscriptionName" value="eventSubscriber"/>
           <param name="topics">
             <array>
@@ -156,6 +158,8 @@
         <constructor>
           <param name="messageQueueClient" dependencyType="IMessageQueueClient"/>
           <param dependencyName="ApplicationEventProvider" name="handlerProvider"/>
+          <param name="commandBus" dependencyType="ICommandBus"></param>
+          <param name="messagePublisher" dependencyType="IMessagePublisher"></param>
           <param name="subscriptionName" value="appEventSubscriber"/>
           <param name="topics">
             <array>
@@ -171,7 +175,7 @@
           <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"/>
         </constructor>
       </register>
-      <register type="IEventPublisher" mapTo="EventPublisher">
+      <register type="IMessagePublisher" mapTo="MessagePublisher">
         <lifetime type="singleton"/>
         <constructor>
           <param name="messageQueueClient" dependencyType="IMessageQueueClient"/>
