reconstuct command bus to be independence of concrete message queue

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -42,9 +42,6 @@
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command"/>
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework"/>
     <alias alias="CommandBus" type="IFramework.Command.Impl.CommandBus, IFramework"/>
-    <!--<alias alias="DistributableCommandBus" type="IFramework.MessageQueue.ZeroMQ.DistributableCommandBus, IFramework.MessageQueue.ZeroMQ" />-->
-    <!--<alias alias="IMessageDistributor" type="IFramework.Message.IMessageDistributor, IFramework"/>
-    <alias alias="CommandDistributor" type="IFramework.MessageQueue.ZeroMQ.CommandDistributor, IFramework.MessageQueue.ZeroMQ"/>-->
     <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework"/>
     <alias alias="CommandHandlerProvider" type="IFramework.Command.Impl.CommandHandlerProvider, IFramework"/>
     <alias alias="IHandlerProvider" type="IFramework.Message.IHandlerProvider, IFramework"/>
@@ -68,9 +65,8 @@
       </register>-->
       <register type="IMessageStore" mapTo="SampleModelContext">
         <lifetime type="PerMessageOrExecutionContext"/>
-        <!--<constructor>
-          <param name="connectionString" value="SampleModelContext"></param>
-        </constructor>-->
+      </register>
+      <register name="perResolveMessageStore" type="IMessageStore" mapTo="SampleModelContext">
       </register>
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton"/>
@@ -78,9 +74,8 @@
       <register type="ICommandBus" mapTo="CommandBus">
         <lifetime type="singleton"/>
         <constructor>
-          <param name="handlerProvider" dependencyType="CommandHandlerProvider"/>
+          <param name="messageQueueClient" dependencyType="IMessageQueueClient"></param>
           <param name="linearCommandManager" dependencyType="LinearCommandManager"/>
-          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"/>
           <param name="commandQueueNames">
             <array>
               <value value="commandqueue1"/>
