--- a/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
@@ -102,9 +102,11 @@
     <Compile Include="IoCPageHandlerFactory.cs" />
     <Compile Include="MultipartMediaTypeFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequireApiHttpsAttribute.cs" />
     <Compile Include="UnityDependencyResolver.cs" />
     <Compile Include="UnityDependencyScope.cs" />
     <Compile Include="Utility.cs" />
+    <Compile Include="ValidateApiAntiForgeryTokenAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
