--- a/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/packages.config
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net4" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net4" />
-  <package id="Unity" version="2.1.505.2" targetFramework="net4" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net4" requireReinstallation="true" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
