--- a/Src/iFramework/IFramework4.5.csproj
+++ b/Src/iFramework/IFramework4.5.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Message\TopicAttribute.cs" />
     <Compile Include="SysExceptions\CurrentMessageContextIsNull.cs" />
     <Compile Include="SysExceptions\DomainException.cs" />
+    <Compile Include="SysExceptions\ErrorCode.cs" />
     <Compile Include="SysExceptions\MessageDuplicatelyHandled.cs" />
     <Compile Include="SysExceptions\NoCommandHandlerExists.cs" />
     <Compile Include="Infrastructure\CookieHelper.cs" />
@@ -200,6 +201,7 @@
     <Compile Include="Specifications\Specification.cs" />
     <Compile Include="Specifications\SpecificationUtility.cs" />
     <Compile Include="SysExceptions\NoHandlerExists.cs" />
+    <Compile Include="SysExceptions\SysException.cs" />
     <Compile Include="UnitOfWork\BaseUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="UnitOfWork\MockUnitOfWork.cs" />
