--- a/Src/iFramework/packages.config
+++ b/Src/iFramework/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.1.1" targetFramework="net4" />
-  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net4" requireReinstallation="true" />
-  <package id="Unity" version="2.1.505.2" targetFramework="net4" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
