--- a/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{BAFCA280-6B58-44E8-B0E7-ED6F51C0EAEC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IFramework.WebApi</RootNamespace>
-    <AssemblyName>IFramework.WebApi</AssemblyName>
+    <RootNamespace>IFramework.AspNet</RootNamespace>
+    <AssemblyName>IFramework.AspNet</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -98,10 +98,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiControllerBase.cs" />
-    <Compile Include="ControllerExtension.cs" />
+    <Compile Include="Controllers\ApiControllerBase.cs" />
+    <Compile Include="CommandHttpClient.cs" />
+    <Compile Include="MediaTypeFormatters\CommandMediaTypeFormatter.cs" />
+    <Compile Include="Controllers\ControllerExtension.cs" />
+    <Compile Include="Cors\CorsAttribute.cs" />
+    <Compile Include="Cors\CorsMessageHandler.cs" />
     <Compile Include="ExceptionManager.cs" />
+    <Compile Include="MediaTypeFormatters\MultipartMediaTypeFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IFramework.Log4Net\IFramework.Log4Net4.5.csproj">
