change errorcodedictionary key to object to adapt various basic types such as int, string and enum etc.

--- a/Src/iFramework/IFramework4.5.csproj
+++ b/Src/iFramework/IFramework4.5.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Event\IEvent.cs" />
     <Compile Include="Infrastructure\DictionaryExtension.cs" />
     <Compile Include="Infrastructure\DisposeObjectHttpModule.cs" />
+    <Compile Include="Infrastructure\ExceptionManager.cs" />
     <Compile Include="Message\IMessagePublisher.cs" />
     <Compile Include="Event\Impl\EventBus.cs" />
     <Compile Include="Message\IMessageSender.cs" />
