--- a/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Cors\CorsAttribute.cs" />
     <Compile Include="Cors\CorsMessageHandler.cs" />
     <Compile Include="MediaTypeFormatters\MultipartMediaTypeFormatter.cs" />
+    <Compile Include="IoCPageHandlerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
