--- a/Src/iFramework/IFramework4.5.csproj
+++ b/Src/iFramework/IFramework4.5.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Infrastructure\DisposeObjectHttpModule.cs" />
     <Compile Include="Infrastructure\ExceptionManager.cs" />
     <Compile Include="Infrastructure\Mailboxes\Impl\DefaultProcessingMessageScheduler.cs" />
+    <Compile Include="Infrastructure\Mailboxes\Impl\MailboxProcessorCommand.cs" />
     <Compile Include="Infrastructure\Mailboxes\Impl\ProcessingMailbox.cs" />
     <Compile Include="Infrastructure\Mailboxes\IProcessingMessageScheduler.cs" />
     <Compile Include="Infrastructure\Mailboxes\IMessageProcessor.cs" />
