--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -73,12 +73,13 @@
           <param name="commandQueueNames">
             <array>
               <value value="commandqueue1" />
-              <value value="commandqueue2" />
-              <value value="commandqueue3" />
+              <!--<value value="commandqueue2" />
+              <value value="commandqueue3" />-->
             </array>
           </param>
           <param name="replyTopicName" value="replyTopic" />
           <param name="replySubscriptionName" value="replySubscritpion" />
+          <param name="needMessageStore" value="true"></param>
         </constructor>
       </register>
       <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
