--- a/Src/Sample/Sample.CommandHandlerTests/app.config
+++ b/Src/Sample/Sample.CommandHandlerTests/app.config
@@ -1,28 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="frameworkConfiguration" type="IFramework.Config.FrameworkConfigurationSection, IFramework" />
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
-    <section name="mvcConfiguration" type="IFramework.Infrastructure.Mvc.Config.MvcConfigurationSection, IFramework.Infrastructure.Mvc" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <frameworkConfiguration>
-    <handlers>
-      <handler name="ApplicationEventSubscriber" sourceType="Assembly" source="Sample.ApplicationEventSubscriber" />
-      <handler name="DomainEventSubscriber" sourceType="Assembly" source="Sample.DomainEventSubscriber" />
-      <handler name="AsyncDomainEventSubscriber" sourceType="Assembly" source="Sample.AsyncDomainEventSubscriber" />
-      <handler name="CommandHandlers" sourceType="Assembly" source="Sample.CommandHandler" />
-    </handlers>
-  </frameworkConfiguration>
-  <mvcConfiguration>
-    <mvcControllers>
-      <mvcController assembly="Sample.CommandService" />
-    </mvcControllers>
-  </mvcConfiguration>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
   <connectionStrings>
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="PerMessageOrExecutionContext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageOrExecutionContextLifetimeManager, IFramework" />
@@ -41,31 +26,11 @@
     <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
     <container>
-      <register type="IMessageStore" mapTo="SampleModelContext">
+      <!--<register type="IMessageStore" mapTo="SampleModelContext">
         <lifetime type="PerMessageOrExecutionContext"></lifetime>
-      </register>
+      </register>-->
       <register type="IUnitOfWork" mapTo="UnitOfWork">
         <lifetime type="PerMessageOrExecutionContext" />
-      </register>
-
-      <register type="IEventSubscriberProvider" mapTo="EventSubscriberProvider">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="assemblies">
-            <array>
-              <value value="DomainEventSubscriber" />
-            </array>
-          </param>
-        </constructor>
-      </register>
-      <register type="IEventPublisher" mapTo="EventPublisher">
-        <lifetime type="singleton"></lifetime>
-      </register>
-      <register type="IDomainEventBus" mapTo="DomainEventBus">
-        <lifetime type="PerMessageOrExecutionContext" />
-        <constructor>
-          <param name="provider" dependencyType="IEventSubscriberProvider" />
-        </constructor>
       </register>
       <register type="IFramework.Repositories.IDomainRepository, IFramework" mapTo="IFramework.EntityFramework.Repositories.DomainRepository, IFramework.EntityFramework" />
       <register type="IFramework.Repositories.IRepository`1, IFramework" mapTo="RepositoryImpl" />
@@ -121,6 +86,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -132,6 +98,6 @@
     </providers>
   </entityFramework>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
 </configuration>
