--- a/Src/Sample/Sample.CommandServiceTests/Sample.CommandServiceTests.csproj
+++ b/Src/Sample/Sample.CommandServiceTests/Sample.CommandServiceTests.csproj
@@ -88,7 +88,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="log4net.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
