--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
@@ -74,6 +75,7 @@
     </Compile>
     <Compile Include="Command\Impl\CommandConsumer.cs" />
     <Compile Include="Command\Impl\LinearCommandManager.cs" />
+    <Compile Include="Command\Impl\LinerKeyAttribute.cs" />
     <Compile Include="Command\Impl\MockCommandBus.cs" />
     <Compile Include="Domain\AggregateRoot.cs" />
     <Compile Include="Domain\AggregateRootWithIdentity.cs" />
@@ -84,6 +86,15 @@
     <Compile Include="Event\IEvent.cs" />
     <Compile Include="Infrastructure\DictionaryExtension.cs" />
     <Compile Include="Infrastructure\DisposeObjectHttpModule.cs" />
+    <Compile Include="Infrastructure\ExceptionManager.cs" />
+    <Compile Include="Infrastructure\Mailboxes\IMessageProcessor.cs" />
+    <Compile Include="Infrastructure\Mailboxes\Impl\DefaultProcessingMessageScheduler.cs" />
+    <Compile Include="Infrastructure\Mailboxes\Impl\MailboxProcessorCommand.cs" />
+    <Compile Include="Infrastructure\Mailboxes\Impl\MessageProcessor.cs" />
+    <Compile Include="Infrastructure\Mailboxes\Impl\ProcessingMailbox.cs" />
+    <Compile Include="Infrastructure\Mailboxes\IProcessingMessageScheduler.cs" />
+    <Compile Include="Infrastructure\Parser.cs" />
+    <Compile Include="Infrastructure\RadixEncoding.cs" />
     <Compile Include="Message\IMessagePublisher.cs" />
     <Compile Include="Event\Impl\EventBus.cs" />
     <Compile Include="Message\IMessageSender.cs" />
@@ -147,6 +158,7 @@
     <Compile Include="Message\TopicAttribute.cs" />
     <Compile Include="SysExceptions\CurrentMessageContextIsNull.cs" />
     <Compile Include="SysExceptions\DomainException.cs" />
+    <Compile Include="SysExceptions\ErrorCode.cs" />
     <Compile Include="SysExceptions\MessageDuplicatelyHandled.cs" />
     <Compile Include="SysExceptions\NoCommandHandlerExists.cs" />
     <Compile Include="Infrastructure\CookieHelper.cs" />
@@ -188,6 +200,7 @@
     <Compile Include="Specifications\Specification.cs" />
     <Compile Include="Specifications\SpecificationUtility.cs" />
     <Compile Include="SysExceptions\NoHandlerExists.cs" />
+    <Compile Include="SysExceptions\SysException.cs" />
     <Compile Include="UnitOfWork\BaseUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="UnitOfWork\MockUnitOfWork.cs" />
